[package]
name = "turbo-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
chrono = "0.4.23"
windows = { version = "0.41.0", features = [
    "Win32_UI_Shell",
    "Win32_System_Com"
]}