[package]
name = "turbo-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.5"
rusttype = "0.9.3"
directories = "4.0.1"
chrono = "0.4.23"
imageproc = "0.23.0"
windows = { version = "0.43.0", features = [
    "Win32_UI_Shell",
    "Win32_System_Com"
]}